snapwebsites (1.5.12.0~xenial) xenial; urgency=high

  * Added INFO suffix in log for when snap_child finishes.

 -- R. Douglas Barbieri <doug@dooglio.net>  Wed, 26 Jul 2017 17:52:50 -0700

snapwebsites (1.5.11.2~xenial) xenial; urgency=high

  * Nightly build.

 -- Build Server <build@m2osw.com>  Tue, 25 Jul 2017 02:00:45 -0700

snapwebsites (1.5.11.0~xenial) xenial; urgency=high

  * Fixed the snapbackup CRON script, the date requires a backslash.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 24 Jul 2017 19:58:15 -0700

snapwebsites (1.5.10.1~xenial) xenial; urgency=high

  * Added "Save Everywhere" for ssh public keys (in ssh plugin).

 -- Doug Barbieri <doug@garibaldi>  Fri, 21 Jul 2017 14:01:46 -0700

snapwebsites (1.5.9.0~xenial) xenial; urgency=high

  * EX-79: Found out that if a page supports more than one image, then we must
    have a field name and not use "image" as that name. We may have a problem
    with the body which does not offer a separate field name for each image...

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 08 Jul 2017 17:14:51 -0700

snapwebsites (1.5.8.0~xenial) xenial; urgency=high

  * Fixed an error in snapfirewall where the manager plugin was not being
    installed, and where the fail2ban action file was being put into the wrong
    directory.
  * Updated some manager-plugins to use the new `widget_select` for drop
    downs.

 -- R. Douglas Barbieri <doug@dooglio.net>  Fri, 07 Jul 2017 11:38:24 -0700

snapwebsites (1.5.7.0~xenial) xenial; urgency=high

  * snapmanager: changed dbproxy and ssh to use switches.

 -- R. Douglas Barbieri <doug@dooglio.net>  Thu, 06 Jul 2017 14:23:18 -0700

snapwebsites (1.5.6.0~xenial) xenial; urgency=high

  * SNAP-222: Checking whether a file was properly added required to test
    with the correct path and not whether a file is attached to the field
    (because on Save we get a string, not the file which was already sent
    to use using AJAX.)
