@@ -87,6 +87,7 @@ private:
     void                    update_all_services( QString const & new_value );
     void                    send_update( QString const& new_value );
     void                    send_status( snap::snap_communicator_message const* message = nullptr );
+    bool                    change_service_status( QString const& exe_path, QString const& unit_name, snap_manager::service_status_t status );
 
     snap_manager::manager * f_snap = nullptr;
 };
